test/corpus/practical_dialects.txt
==================
RepRapFirmware meta commands and object model
==================

var nearEdge = move.axes[global.ENDSTOP_AXIS].machinePosition
G1 Z{global.CLEAR_DEG * global.CW_SIGN} F{global.FEED}
if !sensors.endstops[global.ENDSTOP_AXIS].triggered
  set global.LAST_ERROR_CODE = 505
  echo {"ABORT - " ^ global.LAST_ERROR}
  abort global.LAST_ERROR
else
  echo "measurement ok"
set global.WIDTH = abs(move.axes[global.ENDSTOP_AXIS].machinePosition - var.nearEdge)

---

(source_file
  (rrf_declaration
    (rrf_declaration_keyword)
    (identifier)
    (reference_expression
      (identifier)
      (member_access
        (identifier))
      (subscript_access
        (reference_expression
          (identifier)
          (member_access
            (identifier))))
      (member_access
        (identifier))))
  (program_line
    (g_code)
    (expression_word
      (brace_word_start)
      (binary_expression
        (reference_expression
          (identifier)
          (member_access
            (identifier)))
        (reference_expression
          (identifier)
          (member_access
            (identifier)))))
    (expression_word
      (brace_word_start)
      (reference_expression
        (identifier)
        (member_access
          (identifier)))))
  (rrf_control
    (rrf_control_keyword)
    (unary_expression
      (reference_expression
        (identifier)
        (member_access
          (identifier))
        (subscript_access
          (reference_expression
            (identifier)
            (member_access
              (identifier))))
        (member_access
          (identifier)))))
  (rrf_assignment
    (rrf_set_keyword)
    (reference_expression
      (identifier)
      (member_access
        (identifier)))
    (number))
  (rrf_output
    (rrf_output_keyword)
    (brace_expression
      (binary_expression
        (string
          (double_quoted_string))
        (reference_expression
          (identifier)
          (member_access
            (identifier))))))
  (rrf_output
    (rrf_output_keyword)
    (reference_expression
      (identifier)
      (member_access
        (identifier))))
  (rrf_else
    (rrf_else_keyword))
  (rrf_output
    (rrf_output_keyword)
    (string
      (double_quoted_string)))
  (rrf_assignment
    (rrf_set_keyword)
    (reference_expression
      (identifier)
      (member_access
        (identifier)))
    (call_expression
      (identifier)
      (argument_list
        (binary_expression
          (reference_expression
            (identifier)
            (member_access
              (identifier))
            (subscript_access
              (reference_expression
                (identifier)
                (member_access
                  (identifier))))
            (member_access
              (identifier)))
          (reference_expression
            (identifier)
            (member_access
              (identifier))))))))

==================
Klipper config and Jinja macro
==================

[gcode_macro CLEAN_NOZZLE]
description: Clean the nozzle
variable_wipe_count: 2
rename_existing = CLEAN_NOZZLE_BASE
gcode:
  {% set count = params.COUNT|default(2)|int %}
  {% for wipe in range(count) %}
    G0 X{printer.toolhead.position.x + wipe} F12000
  {% endfor %}
  { action_respond_info("done") }

---

(source_file
  (klipper_section
    (section_start)
    (section_name))
  (klipper_option
    (option_name)
    (bare_argument)
    (bare_argument)
    (bare_argument))
  (klipper_option
    (option_name)
    (number))
  (klipper_option
    (option_name)
    (bare_argument))
  (klipper_option
    (option_name))
  (program_line
    (jinja_statement_inline
      (jinja_directive
        (identifier)
        (filter_expression
          (filter_expression
            (reference_expression
              (identifier)
              (member_access
                (identifier)))
            (identifier)
            (argument_list
              (number)))
          (identifier)))))
  (program_line
    (jinja_statement_inline
      (jinja_directive
        (identifier)
        (call_expression
          (identifier)
          (argument_list
            (identifier))))))
  (program_line
    (g_code)
    (expression_word
      (brace_word_start)
      (binary_expression
        (reference_expression
          (identifier)
          (member_access
            (identifier))
          (member_access
            (identifier))
          (member_access
            (identifier)))
        (identifier)))
    (feed_word))
  (program_line
    (jinja_statement_inline
      (jinja_directive)))
  (program_line
    (brace_expression
      (call_expression
        (identifier)
        (argument_list
          (string
            (double_quoted_string)))))))

==================
Marlin and RepRap printer commands
==================

N42 G1 X10.2 Y20.4 E0.1234 F1800*73
M117 Printing layer 1
M118 E1 A1 action:notification Print_started
M98 P"0:/sys/homeall.g"
M563 P1 D0:1 H1:2 F0:1

---

(source_file
  (program_line
    (line_number)
    (g_code)
    (axis_word)
    (axis_word)
    (axis_word)
    (feed_word)
    (checksum))
  (program_line
    (m_code)
    (bare_argument)
    (bare_argument)
    (number))
  (program_line
    (m_code)
    (axis_word)
    (axis_word)
    (bare_argument)
    (colon)
    (bare_argument)
    (bare_argument))
  (program_line
    (m_code)
    (bare_argument)
    (colon)
    (bare_argument))
  (program_line
    (m_code)
    (parameter_word)
    (parameter_word)
    (colon)
    (number)
    (parameter_word)
    (colon)
    (number)
    (feed_word)
    (colon)
    (number)))

==================
LinuxCNC parameters expressions and O-codes
==================

%
#<_depth> = -2.5
#1 = [#<_depth> / 5]
/ N100 G1 X[#1 + 2] Y#<_depth> (roughing pass)
o<pocket> sub
o100 if [#1 LT 0]
G1 Z#1 F120
o100 endif
o<pocket> endsub
M30
%

---

(source_file
  (percent_line)
  (program_line
    (parameter_assignment
      (parameter_reference)
      (number)))
  (program_line
    (parameter_assignment
      (parameter_reference)
      (bracket_expression
        (binary_expression
          (parameter_reference)
          (number)))))
  (program_line
    (block_delete)
    (line_number)
    (g_code)
    (expression_word
      (bracket_word_start)
      (binary_expression
        (parameter_reference)
        (number)))
    (expression_word
      (parameter_reference_word))
    (parenthesized_comment))
  (o_statement
    (o_label))
  (program_line
    (parameter_word)
    (bare_argument)
    (bracket_expression
      (binary_expression
        (parameter_reference)
        (number))))
  (program_line
    (g_code)
    (expression_word
      (parameter_reference_word))
    (feed_word))
  (program_line
    (parameter_word)
    (bare_argument))
  (o_statement
    (o_label))
  (program_line
    (m_code))
  (percent_line))

==================
Expression forms shared by RRF and Klipper
==================

set global.answer = condition ? max(values[0], 42) : 0
echo {exists(global.answer) && global.answer >= 42}
M117 {params.VALUE|default("n/a")}

---

(source_file
  (rrf_assignment
    (rrf_set_keyword)
    (reference_expression
      (identifier)
      (member_access
        (identifier)))
    (conditional_expression
      (identifier)
      (call_expression
        (identifier)
        (argument_list
          (reference_expression
            (identifier)
            (subscript_access
              (number)))
          (number)))
      (number)))
  (rrf_output
    (rrf_output_keyword)
    (brace_expression
      (binary_expression
        (call_expression
          (identifier)
          (argument_list
            (reference_expression
              (identifier)
              (member_access
                (identifier)))))
        (binary_expression
          (reference_expression
            (identifier)
            (member_access
              (identifier)))
          (number)))))
  (program_line
    (m_code)
    (brace_expression
      (filter_expression
        (reference_expression
          (identifier)
          (member_access
            (identifier)))
        (identifier)
        (argument_list
          (string
            (double_quoted_string)))))))
